--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=5000
+CLIENT_URL=http://localhost:5173
 MONGO_URI=mongodb://localhost:27017/devstash
 JWT_SECRET=supersecret
-CLIENT_URL=http://localhost:5173    
+JWT_REFRESH_SECRET=refreshsupersecret
